Collapsing Links Changelog

0.2: (2008.12.08)
  * Can now use as a widget or manually
  * consolidated javascript to work with other collapsing plugins
  * Uses cookies to keep track of which link categories have been expanded /
    collapsed

0.1.4: (2008.10.29)
  * Fixed bug so that multi-word categories are correctly included / excluded

0.1.3: (2008.10.29)
  * Now opens links in specified target (blank,top,none)

0.1.2: (2008.10.06)
  * Fixed bug with leaving include/exclude categories blank
  * Added option to animate expanding and collapsing
  * Added option for images instead of text as collapsing symbols

0.1.1:
  * Changing default title to 'Blogroll'
 
0.1:
	* Initial Release