@@ -53,3 +53,9 @@
    'checked'; ?> id="animate-<?php echo $number ?>"></input> <label
    for="animate">Animate collapsing and expanding</label>
    </p>
+   <p>
+<label for="collapsPageStyle">Style info:</label>
+   <textarea cols='60' rows='6' id="collapsPageStyle" name="collapsPageStyle">
+    <?php echo stripslashes(get_option('collapsPageStyle')) ?>
+   </textarea>
+    </p>
